--- a/src/aura/NewGameCmp/NewGameCmp.cmp
+++ b/src/aura/NewGameCmp/NewGameCmp.cmp
@@ -7,8 +7,9 @@
 	<aura:attribute name="currentStage" access="private" type="Integer" default="1" description="Stage tracker." />
 	<aura:attribute name="pageTitle" access="private" type="String" default="Create a new game" description="Title of the page." />
 	<aura:attribute name="isNextDisabled" access="private" type="Boolean" default="true" description="Toggles disabled attribute of the Next button." />
-	<aura:attribute name="errorMsg" access="private" type="String" default="" description="Error message." />
-	<aura:attribute name="showError" access="private" type="Boolean" default="false" description="Toggles error message display." />
+	<aura:attribute name="notificationMessage" access="private" type="String" default="" description="Notification message." />
+	<aura:attribute name="notificationSeverity" access="private" type="String" default="" description="Notification severity (message, confirm, info, warning, error)." />
+	<aura:attribute name="showNotification" access="private" type="Boolean" default="false" description="Toggles notification display." />
 	<aura:attribute name="showSpinner" access="private" type="Boolean" default="false" description="Toggle the spinner." />
 	<aura:attribute name="game" access="global" type="Poker_Game__c" description="Poker Game record"
 	                default="{
@@ -18,10 +19,11 @@
 	                    'Status__c' : 'Pending'
 	                }" />
 
+	<aura:handler name="render" value="{!this}" action="{!c.handleRender}" />
+	<aura:handler name="gameNotification" event="c:NewGameNotificationEvent" action="{!c.handleGameNotification}" />
+	<aura:handler name="storySaveEvent" event="c:StorySaveEvent" action="{!c.handleStorySaveEvent}" />
+
 	<div class="slds-container_x-large slds-container_center">
-		<aura:if isTrue="{!v.showError}">
-			<ui:message title="Error" severity="error" closable="true">{!v.errorMsg}</ui:message>
-		</aura:if>
 
 		<div class="header slds-m-vertical_large">
 			<div class="slds-path-coach">
@@ -62,14 +64,14 @@
 
 		<!--stage 1: create a new poker game-->
 		<aura:if isTrue="{!v.currentStage == 1}">
-			<lightning:input label="Game Name" name="gameName" value="{!v.game.Name}" required="true" placeholder="Game name, such as Sprint 3" maxlength="80" onchange="{!c.handleGameNameChange}" aura:id="gameName" />
+			<lightning:input label="Game Name" name="gameName" value="" required="true" placeholder="Game name, such as Sprint 3" maxlength="80" onchange="{!c.handleGameNameChange}" aura:id="gameName" />
 		</aura:if>
 		<!--/stage 1-->
 
 		<!--stage 2: create user stories-->
 		<aura:if isTrue="{!v.currentStage == 2}">
-			<div class="slds-text-heading_medium slds-m-bottom_x-large">Create User Stories</div>
-
+			<div class="slds-text-heading_medium slds-m-bottom_x-large">Add New User Stories</div>
+			<c:NewGameCreateStoriesCmp gameId="{!v.game.Id}" />
 		</aura:if>
 		<!--/stage 2-->
 
@@ -87,5 +89,22 @@
 
 	<aura:if isTrue="{!v.showSpinner}">
 		<lightning:spinner variant="brand" size="large" alternativeText="Saving data" />
+	</aura:if>
+
+	<aura:if isTrue="{!v.showNotification}">
+		<section role="dialog" tabindex="-1" class="slds-modal slds-modal_prompt">
+			<div class="slds-modal__container">
+				<header class="{!'slds-modal__header slds-theme_alert-texture ' + if(v.notificationSeverity == 'error', 'slds-theme_error', 'slds-theme_info')}">
+					<h2 class="slds-text-heading_medium slds-hyphenate">{!if(v.notificationSeverity == 'error', 'Something Has Gone Wrong', ' ')}</h2>
+				</header>
+				<div class="slds-modal__content slds-p-around_medium">
+					<ui:outputRichText value="{!v.notificationMessage}" />
+				</div>
+				<footer class="slds-modal__footer slds-theme_default">
+					<lightning:button variant="neutral" label="OK" onclick="{!c.closeNotification}" />
+				</footer>
+			</div>
+		</section>
+		<div class="slds-backdrop slds-backdrop_open"></div>
 	</aura:if>
 </aura:component>
