--- a/src/aura/GameLauncherCmp/GameLauncherCmp.cmp
+++ b/src/aura/GameLauncherCmp/GameLauncherCmp.cmp
@@ -5,13 +5,15 @@
 <aura:component description="Launches poker game" implements="force:lightningQuickActionWithoutHeader,force:hasRecordId" access="global">
 	<aura:attribute name="recordId" access="global" type="String" default="" description="poker game id" />
 	<aura:attribute name="url" access="private" type="String" default="" description="URL of the poker table app" />
+	<aura:attribute name="seconds" access="private" type="Integer" default="7" description="Seconds until new window opens." />
 
 	<aura:handler name="init" value="{!this}" action="{!c.handleInit}" />
 
 	<div class="slds-page-header" role="banner">
-		<h1 class="slds-page-header__title slds-text-align--center">The poker table will open in a new window.</h1>
+		<h1 class="slds-page-header__title slds-text-align_center">The poker table will open a new window in {!v.seconds} seconds.</h1>
 	</div>
-	<div class="slds-card slds-m-top--large">
-		<p>You can invite others to join by providing with this URL: <a href="{!v.url}" target="_blank">{!v.url}</a></p>
+	<div class="slds-p-around_small">
+		<p>Click the link below to go to the poker game now, or wait to be redirected. You can also invite others to join by providing them with this URL:</p>
+		<div class="slds-card slds-p-around_xx-small"><span class="slds-text-link game-link" onclick="{!c.handleLinkClick}">{!v.url}</span></div>
 	</div>
 </aura:component>
