Spaces (because SFDC likes to remove them)

--- a/src/aura/NewGameCreateStoriesCmp/NewGameCreateStoriesCmp.cmp
+++ b/src/aura/NewGameCreateStoriesCmp/NewGameCreateStoriesCmp.cmp
@@ -27,8 +27,7 @@
 
 	</div>
 
-	<ltng:require
-		styles="{!$Resource.Dragula + '/dragula.min.css'}"
+	<ltng:require styles="{!$Resource.Dragula + '/dragula.min.css'}"
 		scripts="{!$Resource.Dragula + '/dragula.min.js'}"
         afterScriptsLoaded="{!c.handleScriptsLoaded}"
     />
