--- a/src/aura/NewGameCmp/NewGameCmp.cmp
+++ b/src/aura/NewGameCmp/NewGameCmp.cmp
@@ -80,12 +80,16 @@
 		<aura:if isTrue="{!v.currentStage == 3}">
 			<div class="slds-text-heading_medium slds-m-bottom_x-large">Invite Players and Start the Game</div>
 			<p>Invite players to the game by providing them with the following URL:</p>
-			<div class="slds-card slds-m-around_x-large slds-p-around_large">
-				{!v.gameUrl}
+			<div class="slds-card slds-m-top_large slds-p-around_large slds-grid">
+				<textarea aura:id="urlTextarea" class="url-textarea slds-size_3-of-4">{!v.gameUrl}</textarea>
+				<div class="slds-col_bump-left">
+					<lightning:button label="Click to copy" variant="brand" iconName="action:clone" iconPosition="left" onclick="{!c.handleCopyUrlClick}" />
+				</div>
 			</div>
 			<div class="slds-grid slds-grid_align-center slds-m-top_x-large">
 				<lightning:button variant="brand" label="Start the Poker Game!" onclick="{!c.handleStartGameClick}" />
 			</div>
+
 		</aura:if>
 		<!--/stage 3-->
 
